--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/3daddict/nodejs-task-app.git",
   "author": "Michael <print@3daddict.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon mongodb.js"
+  },
   "dependencies": {
     "mongodb": "3.1.10"
   }
