--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "nodemon mongodb.js"
   },
   "dependencies": {
-    "mongodb": "3.1.10"
+    "mongodb": "3.1.10",
+    "mongoose": "^5.5.12"
   }
 }
