--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "mongodb": "3.1.10",
-    "mongoose": "^5.5.12"
+    "mongoose": "^5.5.12",
+    "validator": "10.9.0"
   }
 }
