--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "validator": "10.9.0"
   },
   "devDependencies": {
-    "env-cmd": "8.0.2"
+    "env-cmd": "8.0.2",
+    "nodemon": "^1.19.1"
   }
 }
