--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd ./config/dev.env nodemon src/index.js"
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "@sendgrid/mail": "6.3.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "env-cmd": "8.0.2",
+    "jest": "23.6.0",
     "nodemon": "^1.19.1"
   }
 }
