--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js",
-    "test": "jest"
+    "test": "env-cmd ./config/test.env jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "dependencies": {
     "@sendgrid/mail": "6.3.1",
@@ -24,6 +27,7 @@
   "devDependencies": {
     "env-cmd": "8.0.2",
     "jest": "23.6.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "supertest": "3.4.1"
   }
 }
